# MQTT-Messenger-Backend

./: .gitmodules  CMakeLists.txt  Dockerfile
backend/: CMakeLists.txt  Dockerfile  readme.md
backend/src/: main.cpp
